# Enterprise-Knowledge-Assistant

./: LICENSE  README.md
backend/: .gitignore  docker-compose.yml  requirements.txt  test.py
backend/alembic/: env.py
backend/alembic/versions/: 4a76b5d21437_create_chunks_table.py  7ce08d30669e_create_chunks_table.py  d14576a931d7_create_documents_table.py
backend/app/: main.py
backend/app/api/: auth.py  documents.py
backend/app/core/: jwt_utils.py
backend/app/models/: chunk.py  document.py  users.py
backend/app/schemas/: document.py  users.py
backend/app/services/: chunk_db_service.py  chunk_service.py  document_service.py  ingestion_service.py  pdf_service.py  text_cleaner.py
test/: .dockerignore  .env.example  .env.production  .gitignore  001_create_users_table.py  00_START_HERE.md  API_REFERENCE.md  ARCHITECTURE.md  COMPLETE_FILE_LIST.txt  DELIVERY_SUMMARY.md  Dependencies.md  Dockerfile  FILE_MANIFEST.txt  INDEX.md  Makefile  QUICK_START.md  RAILWAY_DEPLOY.md  README.md  SETUP_STRUCTURE.md  WEEK1_CHECKLIST.md  alembic.ini  alembic_env.py  auth.py  config.py  db.py  docker-compose.yml  docker.env  jwt_utils.py  logging.py  main.py  postman_collection.json  pyproject.toml  requirements.txt  security.py  test_auth.py  user_schemas.py  users.py
